--- a/style.css
+++ b/style.css
@@ -1,118 +1,128 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
-
-
-/* header */
-.nav-sty {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-top: 20px;
+body {
+  background-color: #202124;
+ 
 }
-.nav-img-sty {
-  width: 100%;
-  max-width: 150px;
-}
-.head-div-sty {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.nav-para-sty {
-  padding: 0px 30px 0px 10px;
-  font-size: 18px;
-  font-family: "Noto Sans";
-}
-.nav-btn-sty {
-  padding: 15px 15px;
-  border: none;
-  font-family: "Noto Sans";
-  border-radius: 10px;
-}
-.nav-btn-sty:hover {
-  background-color: #b91c21;
-  color: white;
-}
-/* hero section */
 .container {
-  margin-top: 40px;
-  display: flex;
-  justify-content: space-between;
-}
-.content-sty {
-  padding-left: 70px;
-  padding-top: 270px;
-  margin: 0;
-}
-.content-sty-first-heading {
-  font-family: "Grand Hotel", cursive;
-  font-size: 30px;
-  font-weight: normal;
-  padding-left: 300px;
-  position: relative;
-  top: 6px;
-  left: -13px;
-  transform: rotate(343deg);
-}
-
-.content-sty-heading {
-  font-family: "Poppins", cursive;
-  font-size: 48px;
-  font-weight: 400;
-  letter-spacing: -3px;
-}
-.content-sty-symbol {
-  font-weight: normal;
-  display: inline-block;
-  position: relative;
-  top: -19px;
-  font-size: 28px;
-}
-.content-sty-para{
-font-family: 'Noto Sans'; 
-font-size: 21px; 
-}
-.content-rgt-img
-{
-  width: 100%;
-  max-width: 774px;
-}
-.vehicle-img-sty
-{
-  position: absolute;
-  top: 648px;
-  left: -209px;
-  width: 100%;
-  max-width: 558px;
-  z-index: -1;
-}
-.container-pur-sty
-{
-  margin-top: -20px;
+  min-height: 60vh;
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.doodle-img-sty {
+  width: 100%;
+  max-width: 500px;
+}
+
+.search-menu {
+  width: 100%;
+  max-width: 600px;
+  position: relative;
+}
+.search-main {
+  margin-top: 32px;
+  display: flex;
+  align-items: center;
+  border: 2px solid #5f6368;
+  border-radius: 40px;
+  padding: 0px 36px;
+}
+.search-main:hover {
+  background-color: #303134;
+  border-color: #303134;
+  box-shadow: 0px 0px 4px 2px #1f2022;
   
 }
-.inner-box1{
-  width: 600px;
-  height: 100px;
-  background-color: rgb(0, 128, 128);
-  display: flex;
-  justify-content: space-between;
-  padding-inline: 30px;
-  align-items: center;
+.search-main:focus-within {
+  background-color: #303134;
+  border-color: #303134;
+  box-shadow: 0px 0px 4px 2px #1f2022;
+  border-radius: 32px 32px 0px 0px;
 }
-.inner-box1-icon
-{
-   display: flex;
+.search-input-sty {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  width: 100%;
+  padding: 20px;
+  color: white;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+}
+.search-icon-sty,
+.close-icon-sty {
+  width: 100%;
+  max-width: 20px;
+}
+.close-icon-sty {
+  display: none;
+}
+.search-main:focus-within .close-icon-sty {
+  display: block;
+}
+
+.suggestion-menu {
+  background-color: #303134;
+
+  box-shadow: 0px 6px 4px 2px #1f2022;
+  border-radius: 0px 0px 32px 32px;
+  padding: 0px 0px 24px;
+  display: none;
+  position: absolute;
+  width: 100%;
+  margin: 0;
+ 
 
 }
-.inner-box2{
-  width: 600px;
-  height: 100px;
-  background-color:pink;
+.top-border{
+    border-top: 1px solid #5f6368;
+    margin-inline: 24px;
+    margin-bottom: 8px;
+}
+.suggestion-menu p{
+    margin: 0;
+    padding:8px 24px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+     font-family: 'Roboto', sans-serif;
+      border-radius: 4px;
+      display: flex;
+}
+
+.suggestion-menu span{
+    margin-left: 14px;
+}
+.search-main:focus-within +.suggestion-menu{
+    display: block;
+}
+
+.suggestion-menu p:hover{
+    background-color: #3C4043;
+
+}
+.container-shapes{
+    position: relative;
+    z-index: -1;
+
+}
+.doodle-shapes{
+    position: absolute;
+    top: 10px;
+    right: 25px;
+}
+
+@media(max-width:400px){
+   
+    .doodle-img-sty {
+  width: 100%;
+  max-width: 350px;
+}
+.search-menu{
+    max-width: 400px;
+}
+
 }
